# hack-face

./: LICENSE  README.md  pyproject.toml
images/: .gitignore
scripts/: param_sweep.py  visualize_comparison.py
src/hack_face/: __init__.py  cli.py  face.py  metrics.py  sweep.py  watermark.py
